# Sophia-Agentic-Chatbot

./: .env  .gitignore  FLOW_VERIFICATION.md  QUERY_FLOW_EXPLANATION.md  README.md  app.py  client.py  main.py  pyproject.toml  requirements.txt
servers/: mcp-mysql-server.py
