[project]
name = "sophia-agentic-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.2",
    "langchain-mcp-adapters>=0.2.1",
    "langchain[google-genai]>=1.2.0",
    "mysql-connector-python>=9.1.0",
    "streamlit>=1.52.2",
]
